updated DataflowJobSettingRecommender removed unused code of MyPubsubToGCSJobIntegrationTest minor refactoring of MyAutoscalingFactToBQJob added retried generation of job update curl command